src/edu/itsco/Parser.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = true;}PARSER_BEGIN(Parser)package edu.itsco;
import java.util.ArrayList;

public class Parser{
  public static ArrayList< Variable > listaVariables;  public static void main(String args []) throws ParseException, SemanticException  {
    listaVariables = new ArrayList<Variable >();    Parser parser = new Parser(System.in);    try {
		System.out.println("*** Bienbenidos alcopilador LARS Python ***");
        parser.principal();
        System.out.println("copilocorectamente");
       }catch(Exception ex) {
				System.err.println(ex.getMessage());
          }

        
     }
     private static void agregarVariable(Variable variable) throws SemanticException{
          if(listaVariables.contains(variable)){
            throw new SemanticException(variable, SemanticException.VARIABLE_DUPLICADA);
     }else {  
          	listaVariables.add(variable);
          }
     }

     private static void existeVariable(String id) throws SemanticException {
       Variable v = new Variable();
       v.setId(id);
       if(!listaVariables.contains(v)) {
         throw new SemanticException(v,SemanticException.VARIABLE_NO_DEFINIDA);

         }

       }
          }PARSER_END(Parser)SKIP :{  " "| "\r"| "\t"| "\n"}
TOKEN :
{
  < INICIO : "program" >
| < FIN : "end" >

| < VAR : "var" >
| < ENTERO : "int" >
| < CADENA : "string" >
| < FLOTANTE : "float" >

| < IMPRIMIR : "print" >
| < LEER : "input" >

| < SI : "if" >
| < ENTONCES : ":" >
| < SINO : "else" >

| < PARA : "for" >
| < HASTA : "in" >
| < SIGUIENTE: "next">

| < MIENTRAS : "while" >
| < HACER : "do" >
}
TOKEN :
{
 < SUM : "+" >
| < REST : "-" >
| < MULT : "*" >
| < DIV : "/" >
| < MOD : "%" >
| < POT : "^" >
| < IGUAL: "=">

| < MAYOR : ">" >
| < MENOR : "<" >

| < AND : "&&" >
| < OR : "||" >
| < NOT : "!" >

| < AP: "(" >
| < CP: ")" > 

}
TOKEN :
{
 <#digito: ["0"-"9"] >
| <#letra: ["a"-"z","A"-"Z"] >

| <VALOR_ENTERO: (<digito >)+ >
| <VALOR_FLOTANTE: (< digito >)+"."(< digito >)+ >
| <VALOR_CADENA:("\"" (~["\""])+ "\"") >

| <ID: ("_" | <letra >) ("_"|<letra >|<digito >)*>
}

//ENPIESAN LAS GRAMATICAS

void principal() throws SemanticException : { }
{
  <INICIO > <ID >
  	(
  	  sentencias()
  	)+
  
  <FIN >
}

void sentencias() throws SemanticException : { }
{
  	(
  	  declararVariable()
  	  | gramaticaImprimir()
  	  | gramaticaLeer()
  	  | gramaticaAsignacion()
  	  | gramaticaSi()
  	  | gramaticaMientras()
  	  | gramaticaHacer()
  	  | gramaticaPara()
  	)
}

void declararVariable() throws SemanticException: {
  Token id;
  Token tipoDato;
  boolean inicializada = false;

   }
{
  	<VAR > id =  <ID> tipoDato = tipoDato() [ <IGUAL > valor() {inicializada = true; }]
  	{
  	  Variable var = new Variable(id.image,tipoDato.image);
  	  var.setEstaInicializada(inicializada);
  	  agregarVariable(var);
  	  

  	}
}

Token tipoDato(): {

  Token tipoDato;

   }
{
	(	  tipoDato = <ENTERO >
	  | tipoDato = <CADENA >
	  | tipoDato = <FLOTANTE >
	)
	  {return tipoDato; }
}

void valor()throws SemanticException: {
Token id;
   }
{
  	<VALOR_ENTERO >|<VALOR_CADENA >|<VALOR_FLOTANTE >|id = <ID >
  	{
  	  existeVariable(id.image);
  	}
}

void gramaticaImprimir() throws SemanticException : { }
{
  < IMPRIMIR > < AP > valor() (< SUM > valor()) * < CP >
}

void gramaticaLeer() throws SemanticException: {
  Token id;
}
{
  <LEER >< AP > id = < ID >< CP >
  {
  	  existeVariable(id.image);
  	}
}

void gramaticaAsignacion() throws SemanticException: {
	Token id;
  }
{
  id = < ID > < IGUAL > opBasica()
  {
  	  existeVariable(id.image);
  	}
}

void opBasica()throws SemanticException: { }
{
  ( valor() | opParentesis() )
  ( opAritmetico() ( valor() | opParentesis() ))*  
}

void opParentesis() throws SemanticException:{ }
{
  < AP > opBasica() < CP > 
}

void opAritmetico(): { }
{
  < SUM >|< REST >|< MULT > | < DIV > | < MOD > | < POT >    
}

void gramaticaSi() throws SemanticException: { }
{
  < SI > condicion() < ENTONCES >
    sentencias()
    [ < SINO > sentencias() ]
    < FIN >< SI > 
}

void condicion()throws SemanticException : { }
{
  condicionSimple()(opLogico() condicionSimple() )*
}

void condicionSimple()throws SemanticException: { }
{
  valor() opRelacional() valor()
}

void opLogico(): { }
{
  < AND >|< OR > 
}

void opRelacional(): { }
{
  < MAYOR > [< IGUAL >] |< MENOR > [< IGUAL >] | < NOT > < IGUAL >
}

void gramaticaMientras() throws SemanticException: { }
{
  < MIENTRAS > condicion()
  sentencias()
  < FIN >< MIENTRAS > 
}
 void gramaticaHacer() throws SemanticException: { }
 {
   < HACER >
   sentencias()
   < MIENTRAS > condicion()
 }
 void gramaticaPara() throws SemanticException: { }
 {
   < PARA > < ID > < IGUAL >valor() < HASTA >valor()
   sentencias()
   < SIGUIENTE > 
 }





